# CMakeList.txt: projekt CMake dla elementu 3.10, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (3.10 "3.10.c" "3.10.h" "circular_buffer.h" "circular_buffer.c")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
